# fraud-detector

./: README.md
data_generator/src/main/java/data_generator/: TransactionGenerator.java
fraud_service/: Dockerfile  pom.xml
fraud_service/src/main/java/agents/fraudagent/: FraudAgent.java
fraud_service/src/main/java/server/: AgentCaller.java  Server.java
fraud_service_standard_deployment/: deploy.py  pyproject.toml
fraud_service_standard_deployment/agent/: agent.py
smt/: query_converter.js
