[project]
name = "fraud-detector"
version = "0.1.0"
description = "Credit card fraud detector using ADK"
authors = [{ name = "Kamal Aboul-Hosn", email = "kamal.aboulhosn@gmail.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-adk>=1.15.1",
    "google-cloud-pubsub>=2.31.1",
    "google-generativeai>=0.8.5",
    "langchain-community>=0.3.25",
    "python-dotenv==1.1.0",
    "stackapi>=0.3.1",
    "toolbox-core==0.1.0",
    "google-genai",
    "google-cloud-aiplatform[agent-engines]==1.119.0",  # fixes VertexAiSessionService
]